Properly fixed index.jsp scrollbar by hiding it and only it

--- a/CupCake/src/main/webapp/css/cssGlobal.css
+++ b/CupCake/src/main/webapp/css/cssGlobal.css
@@ -110,9 +110,9 @@
     text-align: center;
 }
 
-#IndexTable
+#index
 {
-
+    overflow-x: hidden;
 }
 
 /*-------Login.jsp css-------*/
@@ -143,7 +143,6 @@
 /*-------Other/Global css-------*/
 html, body
 {
-
     /*overflow-x: hidden;*/
     /*text-align: center;*/
     /*width: 100%;
@@ -152,8 +151,6 @@ html, body
     padding: 0;*/
     font-family: 'Oswald', sans-serif;
     padding-bottom: 1rem;
-     overflow: hidden;
-
 }
 
 button
